added comments and improvements